syntax = "proto3";

package user;
option go_package = "github.com/petarilievCS/grpc-api-gateway/gen/user;userpb";

// Service definition
service UserService {
  rpc GetUser(GetUserRequest) returns (User);
}

// Request message
message GetUserRequest {
  string user_id = 1;
}

// Response message
message User {
  string user_id = 1;
  string name = 2;
  string email = 3;
}